--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +9,90 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/image_iv"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop" />
+            app:layout_constraintDimensionRatio="w,9:16"
+            tools:layout_height="100dp"
+            tools:layout_width="100dp" />
+
+        <TextView
+            android:id="@+id/tv_plot_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_iv"
+            tools:text="Description description description description description description description description description description description description description description description description description description description description description description description" />
+
+        <TextView
+            android:id="@+id/tv_release_date_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/detail_release_date_label"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/image_iv"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_release_date_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toEndOf="@+id/vertical_barrier_label"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Sometime" />
+
+        <TextView
+            android:id="@+id/tv_rating_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/detail_rating_label"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/image_iv"
+            app:layout_constraintTop_toBottomOf="@id/tv_release_date_label" />
+
+        <TextView
+            android:id="@+id/tv_rating_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toEndOf="@+id/vertical_barrier_label"
+            app:layout_constraintTop_toBottomOf="@id/tv_release_date_content"
+            tools:text="10/10" />
+
+
+        <android.support.constraint.Barrier
+            android:id="@+id/vertical_barrier_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="end"
+            app:constraint_referenced_ids="tv_release_date_label" />
+
+        <android.support.constraint.Barrier
+            android:id="@+id/horizontal_barrier_release_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="tv_release_date_label,tv_release_date_content" />
+
+
+        <android.support.constraint.Barrier
+            android:id="@+id/horizontal_barrier_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="tv_rating_label,tv_rating_content" />
 
     </android.support.constraint.ConstraintLayout>
 
