--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -1,108 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".DetailActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".DetailActivity">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <ImageView
-            android:id="@+id/image_iv"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            app:layout_constraintDimensionRatio="w,9:16"
-            tools:layout_height="100dp"
-            tools:layout_width="100dp" />
+            android:padding="8dp">
 
-        <TextView
-            android:id="@+id/tv_plot_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_iv"
-            tools:text="Description description description description description description description description description description description description description description description description description description description description description description description" />
+            <ImageView
+                android:id="@+id/image_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                app:layout_constraintDimensionRatio="w,9:16"
+                tools:layout_height="100dp"
+                tools:layout_width="100dp" />
 
-        <TextView
-            android:id="@+id/tv_release_date_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/detail_release_date_label"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/image_iv"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tv_plot_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/image_iv"
+                tools:text="Description description description description description description description description description description description description description description description description description description description description description description description" />
 
-        <TextView
-            android:id="@+id/tv_release_date_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:layout_constraintStart_toEndOf="@+id/vertical_barrier_label"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Sometime" />
+            <TextView
+                android:id="@+id/tv_release_date_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/detail_release_date_label"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/image_iv"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_rating_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/detail_rating_label"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/image_iv"
-            app:layout_constraintTop_toBottomOf="@id/tv_release_date_label" />
+            <TextView
+                android:id="@+id/tv_release_date_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                app:layout_constraintStart_toEndOf="@+id/vertical_barrier_label"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Sometime" />
 
-        <TextView
-            android:id="@+id/tv_rating_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:layout_constraintStart_toEndOf="@+id/vertical_barrier_label"
-            app:layout_constraintTop_toBottomOf="@id/tv_release_date_content"
-            tools:text="10/10" />
+            <TextView
+                android:id="@+id/tv_rating_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/detail_rating_label"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/image_iv"
+                app:layout_constraintTop_toBottomOf="@id/tv_release_date_label" />
 
-
-        <android.support.constraint.Barrier
-            android:id="@+id/vertical_barrier_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="end"
-            app:constraint_referenced_ids="tv_release_date_label" />
-
-        <android.support.constraint.Barrier
-            android:id="@+id/horizontal_barrier_release_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="tv_release_date_label,tv_release_date_content" />
+            <TextView
+                android:id="@+id/tv_rating_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                app:layout_constraintStart_toEndOf="@+id/vertical_barrier_label"
+                app:layout_constraintTop_toBottomOf="@id/tv_release_date_content"
+                tools:text="10/10" />
 
 
-        <android.support.constraint.Barrier
-            android:id="@+id/horizontal_barrier_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="tv_rating_label,tv_rating_content" />
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/vertical_barrier_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="end"
+                app:constraint_referenced_ids="tv_release_date_label" />
 
-    </android.support.constraint.ConstraintLayout>
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/horizontal_barrier_release_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="tv_release_date_label,tv_release_date_content" />
 
-</LinearLayout>
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/horizontal_barrier_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="tv_rating_label,tv_rating_content" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+</layout>
