--- a/app/src/main/res/layout/detail_activity_content.xml
+++ b/app/src/main/res/layout/detail_activity_content.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:showIn="@layout/detail_activity">
@@ -54,7 +55,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tv_reviews_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />
 
