--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -2,7 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/fav_button"
-        android:icon="@android:drawable/star_off"
-        android:title="@string/details_activity_menu_toggle_favorite"
+        android:icon="@drawable/ic_fav"
+        android:title="@string/details_activity_menu_toggle_fav"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/unfav_button"
+        android:icon="@drawable/ic_unfav"
+        android:title="@string/details_activity_menu_toggle_unfav"
         app:showAsAction="always" />
 </menu>
