--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -22,7 +22,7 @@
 
     <fragment
         android:id="@+id/fragment"
-        android:name="java.io.nanodegree.popularmovies.feature.movie.presentation.MovieListFragment"
+        android:name="java.io.nanodegree.popularmovies.feature.movie.presentation.movielist.MovieListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragmentn_movie_list" />
