--- a/feature_movie/src/main/res/layout/fragmentn_movie_list.xml
+++ b/feature_movie/src/main/res/layout/fragmentn_movie_list.xml
@@ -3,4 +3,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="java.io.nanodegree.popularmovies.feature.movie.presentation.MovieListFragment" />
+    tools:context="java.io.nanodegree.popularmovies.feature.movie.presentation.movielist.MovieListFragment" />
