--- a/feature_movie/src/main/res/layout/movie_detail_fragment.xml
+++ b/feature_movie/src/main/res/layout/movie_detail_fragment.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="java.io.nanodegree.popularmovies.feature.movie.presentation.moviedetail.MovieDetailFragment">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+    <include
+        android:id="@+id/contentLayout"
+        layout="@layout/detail_activity_content" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
