--- a/feature_movie/src/main/res/layout/fragment_movie_list.xml
+++ b/feature_movie/src/main/res/layout/fragment_movie_list.xml
@@ -25,6 +25,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_movies"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
