--- a/app/src/main/res/layout/detail_fragment_content.xml
+++ b/app/src/main/res/layout/detail_fragment_content.xml
@@ -11,8 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        tools:showIn="@layout/detail_activity">
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/image_iv"
@@ -20,6 +19,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:contentDescription="@string/detail_the_movie_poster"
+            android:transitionName="poster_transition_view"
             app:layout_constraintDimensionRatio="w,9:16"
             tools:layout_height="100dp"
             tools:layout_width="100dp" />
@@ -35,23 +35,22 @@
         <TextView
             android:id="@+id/tv_trailers_label"
             style="@style/RecyclerViewStlye"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:text="@string/detail_trailers"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_plot_content" />
 
         <TextView
             android:id="@+id/tv_reviews_label"
             style="@style/RecyclerViewStlye"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/detail_reviews"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/tv_plot_content" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_list" />
 
         <TextView
             android:id="@+id/tv_release_date_label"
@@ -115,29 +114,18 @@
             app:barrierDirection="bottom"
             app:constraint_referenced_ids="tv_rating_label,tv_rating_content" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.50" />
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tv_trailers_list"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_trailers_label" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tv_reviews_list"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
